kubernetes/main/apps/matrix/continuwuity-org/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: continuwuity-org
  namespace: matrix
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: continuwuity-org
  ingress:
    # unported: a same-node socketLB reply misses CT reverse-xlate and lands here
    # as a new connection from the traefik pod, so both instances must be listed
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-external-networking
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 169.254.0.0/16
            - 127.0.0.0/8
            - 100.64.0.0/10
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8448"
              protocol: TCP
            - port: "80"
              protocol: TCP
    # traefik LB VIPs carry a CIDR identity, not an endpoint one, so the RFC1918
    # exception above blackholes sibling federation unless punched back through
    - toCIDR:
        - ${LB_TRAEFIK}/32
        - ${LB_TRAEFIK_EXTERNAL}/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-external-networking
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
